fix a few issues on iphone

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -14,6 +14,7 @@ html {
 body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  -webkit-text-size-adjust: none;
   overflow-x: hidden;
   width: 100%;
   height: 100%;
@@ -223,7 +224,7 @@ nav .btn {
   position: fixed;
   top: 50%;
   left: 0;
-  z-index: 2;
+  z-index: 200;
   transform: translate(0, -50%);
   opacity: 1;
   text-align: center;
@@ -236,7 +237,7 @@ nav .btn {
   margin-bottom: 40px;
   position: relative;
   list-style-type: none;
-  z-index: 3;
+  z-index: 300;
 }
 
 .mobile-menu .overlay {
@@ -247,7 +248,7 @@ nav .btn {
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 1;
+  z-index: 100;
   opacity: .97;
   transition: all .4s;
 }
@@ -260,7 +261,7 @@ nav .btn {
   position: fixed;
   top: 20px;
   right: 7.5%;
-  z-index: 2;
+  z-index: 200;
   opacity: 1;
   transition: all .5s;
 }
@@ -271,7 +272,7 @@ nav .btn {
   background-image: url('../img/emb_signs.png'), url('../img/emb_circle.svg'), url('../img/emb_circle.svg'), url('../img/emb_squiggles.svg');
   background-size: $emb-signs-mini-size, $emb-circle-mini-size, $emb-circle-mini-size, $emb-squiggles-mini-size;
   background-position: bottom 8vh left 20px, top 100px left 40px, bottom 20vh right 25vw, bottom 10vh left -60px;
-  z-index: 2;
+  z-index: 200;
   left: 0;
   transition: all .5s;
 }
